# Smart_Home_Environment

./: .gitignore  CMakeLists.txt  README.md  module_1.asc
baro_demo/: baro_demo.ino
clock_demo/: clock_demo.ino
lib/1.3inch-OLED/: readme.txt
lib/1.3inch-OLED/oled/: oled.ino
lib/1.3inch-OLED/sh1106/: sh1106.h
src/: src.ino
